RESOLVED FIXED99225
StringBuilder::append(StringBuilder&) doesn't take into account the bit size of the argument string
https://bugs.webkit.org/show_bug.cgi?id=99225
Summary StringBuilder::append(StringBuilder&) doesn't take into account the bit size ...
Michael Saboff
Reported 2012-10-12 17:56:43 PDT
StringBuilder::append(StringBuilder& other) always uses other.characters() to access the characters to append. This should be changed to use characters8() or characters16() as appropriate.
Attachments
Patch (1.19 KB, patch)
2012-10-12 18:06 PDT, Michael Saboff
benjamin: review+
buildbot: commit-queue-
Fix for test failures (1.21 KB, patch)
2012-10-12 22:23 PDT, Michael Saboff
benjamin: review+
Michael Saboff
Comment 1 2012-10-12 18:06:50 PDT
Build Bot
Comment 2 2012-10-12 21:13:10 PDT
Comment on attachment 168523 [details] Patch Attachment 168523 [details] did not pass mac-ews (mac): Output: http://queues.webkit.org/results/14292122 New failing tests: fast/css/transform-inline-style.html editing/execCommand/5458246.html fast/css/remove-shorthand.html fast/dom/HTMLMeterElement/meter-element-with-child-crash.html editing/execCommand/create-list-with-hr.html editing/pasteboard/input-field-1.html editing/inserting/insert-images-in-pre-x-crash.html fast/backgrounds/repeat/parsing-background-repeat.html editing/pasteboard/4806874.html fast/css/transform-inline-style-remove.html editing/pasteboard/paste-line-endings-001.html fast/backgrounds/background-shorthand-with-backgroundSize-style.html fast/css/background-position-serialize.html editing/execCommand/insert-ordered-list.html editing/execCommand/infinite-recursion-computeRectForRepaint.html fast/dom/background-shorthand-csstext.html fast/css/shorthand-mismatched-list-crash.html
Michael Saboff
Comment 3 2012-10-12 22:23:54 PDT
Created attachment 168541 [details] Fix for test failures Added missing "else".
Michael Saboff
Comment 4 2012-10-12 22:30:05 PDT
Benjamin Poulain
Comment 5 2012-10-12 22:33:50 PDT
Comment on attachment 168541 [details] Fix for test failures Silly me. I checked characters8() and characters16(), and did not pay much attention to the actual code...
Note You need to log in before you can comment on or make changes to this bug.