StringBuilder::append(StringBuilder&) doesn't take into account the bit size of the argument string https://bugs.webkit.org/show_bug.cgi?id=99225

Reviewed by Benjamin Poulain.

Added 8 bit path.

* wtf/text/StringBuilder.h:
(WTF::StringBuilder::append):


Canonical link: https://commits.webkit.org/117218@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131250 268f45cc-cd09-0410-ab3c-d52691b4dbfc